# cytosim-cloning-algorithm

./: .gitignore  CMakeLists.txt  INSTALLME.md  INSTALLME.sh  INSTALLME.txt  LICENSE.md  ProgramStructure.md  README.md  a.out  cloning_cytosim.cpp  cluster_setup.sh  parse_output.cpp
cloning_seed/: cloning.slurm  config.clone  config.cym  iterate.sh  run_clone.sh
compilation_stuff/: compilation_help_notes.txt
cytosim/2D_500actin_coarse/: SCRIPT.sh  config.cym.tpl  cytosim.sbatch  frametool
cytosim_example_files/2D_500actin_coarse/: SCRIPT.sh  play  run_sims.sh  sim
doc/: .gitignore  Doxyfile  cloning  cloning.drawio  compiling_cloning_algorithm_on_cluster.md  compiling_cytosim_on_cluster.md
doc/Doxygen/: Doxyfile
doc/example_files/: config.clone  config.cym  link.txt  property.txt
doc/html/: annotated.html  annotated_dup.js  calculate_8cpp.html  calculate_8cpp.js  calculate_8cpp_a0d42d2d1aed00bc455bc672cb9dbc8c4_icgraph.md5  calculate_8cpp_a93ed9f231ff0b8da6fa1fec1fd493441_icgraph.md5  calculate_8cpp_ab0888377afe2cdb9f766b24265369dcf_icgraph.map  calculate_8cpp_af62e05bef6145fc2d70095dd1c0c1ad4_icgraph.map  calculate_8cpp_source.html  calculate_8h.html  calculate_8h.js  calculate_8h__dep__incl.map  calculate_8h__dep__incl.md5  calculate_8h__incl.map  calculate_8h__incl.md5  calculate_8h_a83fa3823690294901994f7a65f2d3037_icgraph.md5  calculate_8h_a93ed9f231ff0b8da6fa1fec1fd493441_icgraph.map  calculate_8h_aae8e3878546cdf1c65bce05c077e86ad_icgraph.map  calculate_8h_aae8e3878546cdf1c65bce05c077e86ad_icgraph.md5  calculate_8h_af62e05bef6145fc2d70095dd1c0c1ad4_cgraph.md5  calculate_8h_af62e05bef6145fc2d70095dd1c0c1ad4_icgraph.md5  calculate_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  files_dup.js  frame_8cpp.html  frame_8cpp.js  frame_8cpp__incl.map  frame_8cpp__incl.md5  frame_8cpp_source.html  frame_8h.html  frame_8h.js  frame_8h__dep__incl.map  frame_8h__dep__incl.md5  frame_8h__incl.map  frame_8h__incl.md5  frame_8h_source.html  functions.html  (+102 more)
doc/latex/: annotated.tex  calculate_8cpp.tex  calculate_8cpp_a0d42d2d1aed00bc455bc672cb9dbc8c4_icgraph.md5  calculate_8cpp_a83fa3823690294901994f7a65f2d3037_icgraph.md5  calculate_8cpp_aae8e3878546cdf1c65bce05c077e86ad_icgraph.md5  calculate_8cpp_ab0888377afe2cdb9f766b24265369dcf_icgraph.md5  calculate_8cpp_af62e05bef6145fc2d70095dd1c0c1ad4_cgraph.md5  calculate_8h.tex  calculate_8h__dep__incl.md5  calculate_8h__incl.md5  calculate_8h_a25aaa443598ebc1bfa3f99ec2db18f19_icgraph.md5  calculate_8h_a7102b43ee7a698dcc9fa17c80aa6ce05_icgraph.md5  calculate_8h_a93ed9f231ff0b8da6fa1fec1fd493441_icgraph.md5  calculate_8h_af62e05bef6145fc2d70095dd1c0c1ad4_icgraph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  frame_8cpp.tex  frame_8cpp__incl.md5  frame_8h.tex  frame_8h__dep__incl.md5  frame_8h__incl.md5  hand_8h__incl.md5  head_8cpp.tex  head_8cpp__incl.md5  head_8h.tex  head_8h__dep__incl.md5  head_8h__incl.md5  link_8txt.tex  linker_8cpp.tex  linker_8cpp__incl.md5  linker_8h.tex  linker_8h__dep__incl.md5  linker_8h__incl.md5  main_8cpp.tex  main_8cpp__incl.md5  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  parse_8cpp.tex  parse_8cpp__incl.md5  parse_8cpp_a570eeacaa210304c51f11a31fabca337_icgraph.md5  parse_8cpp_a8ea5737d9075c49b931c9886e892125c_icgraph.md5  (+24 more)
doc/resources/: makefile.inc
doc/updates/: 20200713.md  20200715.md
progress_notes/: 20200715.md  20200721.md  20200807.md
resources/: makefile.inc
src/: .gitignore  .wDots.txt.swp  calculate  calculate.cpp  calculate.h  calculate_main.cpp  calculator.cpp  calculator.h  config.cym  control  control_population.cpp  control_population.h  frame.cpp  frame.h  hand.cpp  hand.h  head.cpp  head.h  launch  launch.cpp  launch.h  linker.cpp  linker.h  main  main.cpp  makefile  parse.cpp  parse.h  parser.cpp  parser.h  script_output.txt  simul.cpp  simul.h  wDotIntegral.txt  wDots.txt
src/axial_forces/: fiber.h  (+8 more)
src/calc_traj_work/: CMakeLists.txt  calculator.cpp  calculator.h  frame.h  linker.h  main.cpp  parser.cpp  parser.h  simul.h
src/cloning/: CMakeLists.txt  analyze_clones.cpp  analyze_clones.h  clone.cpp  clone.h  cloning_calculations.cpp  cloning_calculations.h  cloning_logistics.cpp  cloning_logistics.h  cloning_params.cpp  cloning_params.h  control_population.cpp  count_clones.cpp  create_clones.cpp  create_clones.h  cytosim_interface.cpp  cytosim_interface.h  cytosim_params.cpp  cytosim_params.h  genealogy.h  generation.h  increment.h  interface.cpp  interface.h  iteration.h  iterator.cpp  iterator.h  launch.cpp  launch.h  main.cpp
suri_code/: Cloning_run.cpp  Langevin_dynamics.cpp  Makefile  cloning.out
test/: config.cym
(+213 files in other folders)
