add_executable(clone
	main.cpp
	cloning_params.cpp
	cloning_params.h
	create_clones.cpp
	create_clones.h
	cytosim_params.cpp
	cytosim_params.h
	cloning_calculations.cpp
	cloning_calculations.h
	interface.cpp
	interface.h
	interface.h
	iterator.cpp
	iterator.h
	cloning_logistics.cpp
	cloning_logistics.h
	)
